# daftcode_recruitment_triangle

./: README.md  Triangle.py  gen_problem.py  main.py  solve.py  solver.py
problems/: gen_problem.py  hard.txt
python/: PathTree.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  tree.rs  triangle_solver.rs
test/: test_Node.py
