[package]
name = "triangle_solver"
version = "0.1.0"
authors = ["Roman Moskalenko <skalermo@gmail.com>"]
edition = "2018"

[lib]
name = "triangle_solver_lib"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]

[[bin]]
name = "triangle_solver"
path = "src/main.rs"

